WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29061
Fix obvious copy-paste error in AccessibilityUIElement::clickPointY()
https://bugs.webkit.org/show_bug.cgi?id=29061
Summary
Fix obvious copy-paste error in AccessibilityUIElement::clickPointY()
David Kilzer (:ddkilzer)
Reported
2009-09-08 17:51:45 PDT
Created
attachment 39237
[details]
Patch v1 Reviewed by NOBODY (OOPS!). No change to layout test results. * DumpRenderTree/mac/AccessibilityUIElementMac.mm: (AccessibilityUIElement::clickPointY): Changed to return y value instead of x value. --- 2 files changed, 13 insertions(+), 1 deletions(-)
Attachments
Patch v1
(1.28 KB, patch)
2009-09-08 17:51 PDT
,
David Kilzer (:ddkilzer)
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-09-08 21:14:45 PDT
Comment on
attachment 39237
[details]
Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 2
2009-09-09 07:49:51 PDT
Committed
r48206
: <
http://trac.webkit.org/changeset/48206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug