        <http://webkit.org/b/29061> Fix obvious copy-paste error in AccessibilityUIElement::clickPointY()

Reviewed by Mark Rowe.

        No change to layout test results.

        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::clickPointY): Changed to return y value
        instead of x value.

Canonical link: https://commits.webkit.org/39775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48206 268f45cc-cd09-0410-ab3c-d52691b4dbfc